use ES instead of Mozart REST API; log config on load

--- a/conf/settings.yaml.tmpl
+++ b/conf/settings.yaml.tmpl
@@ -1,10 +1,10 @@
-# Mozart REST API URLs for each cluster
-MOZART_REST_URL:
+# Mozart ES URLs for each cluster
+MOZART_ES_URL:
   # cluster1
-  {{ CLUSTER1 }}: {{ CLUSTER1_MOZART_URL }}
+  {{ CLUSTER1 }}: {{ CLUSTER1_MOZART_ES_URL }}
   # cluster2
-  {{ CLUSTER2 }}: {{ CLUSTER2_MOZART_URL }}
-  # e.g. grfn: https://127.0.0.1/mozart/api/v0.1
+  {{ CLUSTER2 }}: {{ CLUSTER2_MOZART_ES_URL }}
+  # e.g. grfn: https://127.0.0.1:9200
 
 # backoff settings
 BACKOFF_MAX_VALUE: 64
