pull bot token and id from settings.yaml

--- a/conf/settings.yaml.tmpl
+++ b/conf/settings.yaml.tmpl
@@ -1,3 +1,9 @@
+# slack bot token
+BOT_TOKEN: {{ SLACK_BOT_TOKEN }}
+
+# slack bot ID
+BOT_ID: {{ BOT_ID }}
+
 # Mozart ES URLs for each cluster
 MOZART_ES_URL:
   # cluster1
